--- a/index.html
+++ b/index.html
@@ -469,13 +469,13 @@
                 </div>
                 <!-- //Киев. Харьков. Полтава  -->
 
-                <!-- Харьков, Хризантемы, Диснейленд -->
+                <!-- Карпаты - 2022 -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
-                    <h4 class="destination mb-3">Харьков </h4>
+                    <h4 class="destination mb-3"> Карпаты </h4>
                     <div class="image-position position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Kharkiv-Chrysanthemums-Disneyland.html">
-                            <img src="/images/Kharkiv-Chrysanthemums-Disneyland/pop-Kharkiv-Chrysanthemums-Disneyland.jpg" class="img-fluid"
-                                alt="Харьков, Хризантемы, Диснейленд">
+                        <a href="https://novipovorot.pp.ua/page-Carpathians-2022.html">
+                            <img src="/images/Carpathians-2022/pop-Carpathians2022.jpg" class="img-fluid"
+                                alt="Карпаты-2022">
                         </a>
                         <div class="rating">
                             <ul>
@@ -489,12 +489,12 @@
                     </div>
                     <div class="destinations-info">
                         <div class="caption mb-lg-3">
-                            <h4> Харьков  </h4>
+                            <h4> Карпаты 2022  </h4>
                             <a href="booking.html">Забронировать</a>
                         </div>
                     </div>
                 </div>
-                <!-- //Харьков, Хризантемы, Диснейленд -->
+                <!-- //Карпаты - 2022 -->
 
                 <!-- Новогодние огни Днепра  -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
