--- a/booking.html
+++ b/booking.html
@@ -140,7 +140,9 @@
                             </div>
                             <div class="col-md-12 form-group contact-forms">
                                 <select name="Тур" class="form-control" id="#">
-                                    <option>Новогодние огни Днепра</option
+                                    <option>Лимонарий</option>
+                                    <option>Карпаты 2022</option>
+                                    <option>Новогодние огни Днепра<option>
                                     <option>Мурляндия</option>
                                     <option>Киев. Харьков. Полтава</option>
                                     <option>Сырная ферма с дегустацией</option>
@@ -170,7 +172,6 @@
                                     <option>Грузия</option>
                                     <option>Tik Tok pati</option>
                                     <option>Одесса</option>
-                                    <option>Лимонарий</option>
                                     <option>Пиво</option>
                                     <option>ЛОЛ</option>
                                     <option>Турция</option>
