--- a/packages.html
+++ b/packages.html
@@ -245,7 +245,7 @@
                             <img src="images/Carpathians-2022/home-Carpathians2022.jpg" alt="baloon-fast"
                                 class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span>2800-3700 грн(от дат заезда) </span></p>
+                        <p><span class="fa fa-tags"></span> <span>от 2800грн </span></p>
                     </div>
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span> Карпаты 2022 </h6>
