--- a/packages.html
+++ b/packages.html
@@ -553,20 +553,22 @@
     </section>
     <!-- Туры -->
 
-    <!-- Популярные Направления -->
+   <!-- 
+        ***  Популярные Направления  ***
+     -->
     <section class="destinations py-5" id="destinations">
         <div class="container py-xl-5 py-lg-3">
             <h3 class="heading text-capitalize text-center" data-aos="zoom-in"> Популярные Направления</h3>
             <p class="text mt-2 mb-5 text-center">Туры выходного дня "Новый Поворот"</p>
             <div class="row inner-sec-w3layouts-w3pvt-lauinfo">
 
-                <!-- Межигорье. Умань. Перлина Кохання  -->
+                <!-- Киев. Харьков. Полтава  -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
-                    <h4 class="destination mb-3"> Межигорье </h4>
+                    <h4 class="destination mb-3"> Киев </h4>
                     <div class="image-position position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Mezhyhirya-Uman-pearls-of-love.html">
-                            <img src="/images/Mezhyhirya-Uman-pearls-of-love/pop-Mezhyhirya-Uman-pearls-of-love.jpg" class="img-fluid"
-                                alt="Межигорье. Умань. Перлина Кохання">
+                        <a href="https://novipovorot.pp.ua/page-Kiev-Kharkiv-Poltava.html">
+                            <img src="/images/Kiev-Kharkiv-Poltava/pop-Kiev-Kharkiv-Poltava.jpg" class="img-fluid"
+                                alt="Киев. Харьков. Полтава">
                         </a>
                         <div class="rating">
                             <ul>
@@ -580,20 +582,20 @@
                     </div>
                     <div class="destinations-info">
                         <div class="caption mb-lg-3">
-                            <h4> Межигорье </h4>
+                            <h4> Киев </h4>
                             <a href="booking.html">Забронировать</a>
                         </div>
                     </div>
                 </div>
-                <!-- //Межигорье. Умань. Перлина Кохання  -->
+                <!-- //Киев. Харьков. Полтава  -->
 
-                <!-- Харьков, Хризантемы, Диснейленд -->
+                <!-- Карпаты - 2022 -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
-                    <h4 class="destination mb-3">Харьков </h4>
+                    <h4 class="destination mb-3"> Карпаты </h4>
                     <div class="image-position position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Kharkiv-Chrysanthemums-Disneyland.html">
-                            <img src="/images/Kharkiv-Chrysanthemums-Disneyland/pop-Kharkiv-Chrysanthemums-Disneyland.jpg" class="img-fluid"
-                                alt="Харьков, Хризантемы, Диснейленд">
+                        <a href="https://novipovorot.pp.ua/page-Carpathians-2022.html">
+                            <img src="/images/Carpathians-2022/pop-Carpathians2022.jpg" class="img-fluid"
+                                alt="Карпаты-2022">
                         </a>
                         <div class="rating">
                             <ul>
@@ -607,19 +609,19 @@
                     </div>
                     <div class="destinations-info">
                         <div class="caption mb-lg-3">
-                            <h4> Харьков  </h4>
+                            <h4> Карпаты 2022  </h4>
                             <a href="booking.html">Забронировать</a>
                         </div>
                     </div>
                 </div>
-                <!-- //Харьков, Хризантемы, Диснейленд -->
+                <!-- //Карпаты - 2022 -->
 
-                <!-- Львов  -->
+                <!-- Новогодние огни Днепра  -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
-                    <h4 class="destination mb-3">Львов</h4>
+                    <h4 class="destination mb-3"> Днепр</h4>
                     <div class="image-position position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Lviv-for-weekend.html">
-                            <img src="./images/Lviv-for-weekend/pop-Lviv-for-weekend.jpg" class="img-fluid" alt="Набережная">
+                        <a href="https://novipovorot.pp.ua/page-dnipro-new-year.html">
+                            <img src="./images/dnipro-new-year/pop-dnipro-new-year.jpg" class="img-fluid" alt="Днепр">
                         </a>
                         <div class="rating">
                             <ul>
@@ -633,20 +635,20 @@
                     </div>
                     <div class="destinations-info">
                         <div class="caption mb-lg-3">
-                            <h4>Львов На Выходные</h4>
+                            <h4>Днепр</h4>
                             <a href="booking.html">Забронировать</a>
                         </div>
                     </div>
                 </div>
-                <!-- //Львов  -->
-                
-                <!-- Жу-Жу Парк  -->
+                <!-- //Новогодние огни Днепра  -->
+
+                <!-- Лимонарий  -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
-                    <h4 class="destination mb-3">Жу-Жу Парк</h4>
+                    <h4 class="destination mb-3">Лимонарий</h4>
                     <div class="image-position position-relative">
-                        <a href="https://novipovorot.pp.ua/page-zhu-zhu-park-Dnipro.html">
-                            <img src="./images/Zhu-zhu-park-Dnipro/pop-Zhu-zhu-park-Dnipro.jpg" class="img-fluid"
-                                alt="Зоопарк">
+                        <a href="https://novipovorot.pp.ua/page-Limonariy.html">
+                            <img src="./images/Limonary/pop-Limonariy.jpg" class="img-fluid"
+                                alt="Лимонарий">
                         </a>
                         <div class="rating">
                             <ul>
@@ -660,16 +662,17 @@
                     </div>
                     <div class="destinations-info">
                         <div class="caption mb-lg-3">
-                            <h4>Жу-Жу Парк</h4>
+                            <h4>Лимонарий</h4>
                             <a href="booking.html">Забронировать</a>
                         </div>
                     </div>
                 </div>
-                <!-- //Жу-Жу Парк  -->
-                
+                <!-- //Лимонарий  -->
+
             </div>
         </div>
     </section>
+
     <!--  //Популярные Направления -->
 
     <!-- Футер  -->
