--- a/page-Carpathians-2022.html
+++ b/page-Carpathians-2022.html
@@ -122,7 +122,7 @@
                 <div class="col-lg-8 col-xl-9 main-title-text">
 			
                     <!-- Заголовок -->
-                    <h3 class="title titleTravel">
+                    <h3 class="title">
 			 Карпаты - 2022
 		    </h3>
                     <!-- //Заголовок -->
@@ -1054,14 +1054,7 @@
             travel.classList.toggle('text-danger');
         }, 1500)
     </script>
-
-   <script>
-        let titleTravel = document.querySelector('.titleTravel');
-        setInterval(function () {
-            titleTravel.classList.toggle('text-primary');
-        }, 1500)
-    </script>
-
+   
 </body>
 
 </html>
