--- a/blog.html
+++ b/blog.html
@@ -309,7 +309,9 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <a href="#blog-single">
-                            <img class="card-img-bottom d-block radius-image" src="./images/travel.jpg"
+                            <!--<img class="card-img-bottom d-block radius-image" src="./images/travel.jpg"
+                                alt="Помогите Изображению">-->
+				<img class="card-img-bottom d-block radius-image" src="https://picsum.photos/540/338"
                                 alt="Помогите Изображению">
                         </a>
                     </div>
