--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -249,12 +249,12 @@
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
 
-                                        <p><b> 14:45 -11.12 12:40- 18.12 </b> время сбора группы на экскурсию.
+                                        <p><b> 12:40- 18.12 10:40 и 12:40 2.01 </b> время сбора группы на экскурсию.
                                             Сбор в районе 9-й больницы, Правый берег,
                                             дополнительную информацию сбрасываем за 1-2 дня
                                             до тура всем кто записался и оплатил экскурсию.
                                             (как всегда оплата через расчетный счет в течении суток после брони)</p>
-                                        <p><b> 14:00 -11.12 13:00-18.12 </b> после небольшой пешей прогулки мы на месте.
+                                        <p><b> 13:00 -18.12 11:00 и 13:00-2.01 </b> после небольшой пешей прогулки мы на месте.
                                             Проходим частную территорию и попадаем в Лимонарий!
                                             Удивительный уголок солнечно-лимонного счастья.
                                             Слушаем историю создания этого чуда. Обязательно
