--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                         </h5>
                         <p class="">Экскурсия в Лимонный сад с Новым поворотом </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 11 и 18 Декабря</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 18 Декабря и 2 Января </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
