--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                            Сырная ферма с дегустацией...
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 12 Декабря и 9 Января </span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 9 Января </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
