--- a/Excursion-Schedule.html
+++ b/Excursion-Schedule.html
@@ -128,7 +128,7 @@
 				      
 				       <tr>
 					  <th scope="row"></th>
-					  <td>Киев, Харьков, Полтава</td>
+					  <td><a target="_blank" href="https://novipovorot.pp.ua/page-Kiev-Kharkiv-Poltava.html ">Киев, Харьков, Полтава</a></td>
 					  <td> 25-26 Декабря</td>
 				       </tr>
 				      
