--- a/Excursion-Schedule.html
+++ b/Excursion-Schedule.html
@@ -158,7 +158,7 @@
 				      
 				      <tr>
 					  <th scope="row"></th>
-					  <td>Сырная Ферма С Дегустацией</td>
+					  <td><a target="_blank" href="https://novipovorot.pp.ua/page-cheese-farm-tasting.html">Сырная Ферма С Дегустацией</a></td>
 					  <td>9 Января</td>
 				       </tr>
 				      
