--- a/page-Pink-Lake.html
+++ b/page-Pink-Lake.html
@@ -126,9 +126,9 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span class="dateOfTravel">23 - 24
-                                        Августа
-                                        2021 Года</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span class="dateOfTravel">
+                                        15 Января
+                                        2022 Года</span>
                                 </li>
                             </ul>
                         </div>
@@ -242,7 +242,7 @@
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
 
-                                        <h5>23 августа</h5>
+                                        <h5>15 января</h5>
                                         <p>
                                             <strong>08:00</strong>
                                             Выезд из Центра Запорожья после минутки позитива.
@@ -290,7 +290,7 @@
                                             море!
                                         </p>
                                         <hr>
-                                        <h5>24 августа</h5>
+                                        <h5>16 января</h5>
                                         <p><strong>08:00 - 09:00</strong>
                                             Кушаем, все кто успел купаються разок-другой в море и в путь...
                                         </p>
