--- a/page-Pink-Lake.html
+++ b/page-Pink-Lake.html
@@ -127,8 +127,7 @@
                             <ul class="listing mt-3">
                                 <li>
                                     <span class="fa fa-calendar mr-2"></span>Дата: <span class="dateOfTravel">
-                                        15 Января
-                                        2022 Года</span>
+                                        Не Запланировано</span>
                                 </li>
                             </ul>
                         </div>
@@ -242,7 +241,7 @@
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
 
-                                        <h5>15 января</h5>
+                                        <h5> Дата</h5>
                                         <p>
                                             <strong>08:00</strong>
                                             Выезд из Центра Запорожья после минутки позитива.
@@ -290,7 +289,7 @@
                                             море!
                                         </p>
                                         <hr>
-                                        <h5>16 января</h5>
+                                        <h5>Дата</h5>
                                         <p><strong>08:00 - 09:00</strong>
                                             Кушаем, все кто успел купаються разок-другой в море и в путь...
                                         </p>
