--- a/Excursion-Schedule.html
+++ b/Excursion-Schedule.html
@@ -164,7 +164,7 @@
 				      
 				      <tr>
 					 <th scope="row"></th>
-					  <td><a target="_blank" href="https://novipovorot.pp.ua/page-Pink-Lake.html">Арабатские термы и дегустация вина на Розововм озере</a></td>
+					  <td>Арабатские термы и дегустация вина на Розововм озере</td>
 					  <td>15 Января </td>
 				      </tr>
 				      
