--- a/packages-page-three.html
+++ b/packages-page-three.html
@@ -116,6 +116,30 @@
             <p class="text mt-2 mb-5 text-center"> Туры выходного дня "Новый Поворот" </p>
             <div class="row">
                 
+                 <!--  Яворовская Ниагара -->
+                <div class="col-lg-3 col-sm-6 mb-5">
+                    <div class="image-tour position-relative">
+                        <a href="https://novipovorot.pp.ua/page-yavorovskaya-niagara.html">
+                            <img src="images/Yavorovskaya-niagara-min.jpg" alt="Яворовская Ниагара" class="img-fluid" />
+                        </a>
+                        <p><span class="fa fa-tags"></span> <span>4200грн.</span></p>
+                    </div>
+                    <div class="package-info">
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Карпаты</h6>
+                        <h5 class="my-2">
+                            <a href="https://novipovorot.pp.ua/page-yavorovskaya-niagara.html">
+                                Яворовская Ниагара
+                            </a>
+                        </h5>
+                        <p class="">Расписание экскурсии на 2021 Год.</p>
+                        <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>2021 Год</span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>4 Дня</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <!--  //Яворовская Ниагара -->
+                
                 <!-- 6 Дней в Карпатах -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
