--- a/booking.html
+++ b/booking.html
@@ -140,6 +140,8 @@
                             </div>
                             <div class="col-md-12 form-group contact-forms">
                                 <select name="Тур" class="form-control" id="#">
+                                    <option>Арабатские термы</option>
+                                    <option>Рождество по-Королевски</option>
                                     <option>Лимонарий</option>
                                     <option>Карпаты 2022</option>
                                     <option>Новогодние огни Днепра<option>
