--- a/packages.html
+++ b/packages.html
@@ -204,7 +204,7 @@
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>  Харьков. Полтава </h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-Kharkiv-Poltava-Christmas.html">
-                               Киев. Харьков. Полтава
+                               Рождество Харьков и Полтава
                             </a>
                         </h5>
                         <p class="">
@@ -266,7 +266,7 @@
                            Арабатские термы и Розовое озеро...
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 16 Января </span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 15 Января </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
