--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>  Харьков. Полтава </h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-Kharkiv-Poltava-Christmas.html">
-                               Киев. Харьков. Полтава
+                               Рождество Харьков и Полтава
                             </a>
                         </h5>
                         <p class="">
