--- a/Excursion-Schedule.html
+++ b/Excursion-Schedule.html
@@ -143,7 +143,7 @@
 				      
 				       <tr>
 					  <th scope="row"></th>
-					  <td>Рождество по Королевски!</td>
+					  <td><a target="_blank" href="https://novipovorot.pp.ua/page-Kharkiv-Poltava-Christmas.html">Рождество по Королевски!</a></td>
 					  <td> 7-8 Января</td>
 				       </tr>
 				      
