--- a/Excursion-Schedule.html
+++ b/Excursion-Schedule.html
@@ -155,7 +155,7 @@
 				      
 				      <tr>
 					 <th scope="row"></th>
-					  <td>Арабатские термы и дегустация вина на Розововм озере</td>
+					  <td><a target="_blank" href="https://novipovorot.pp.ua/page-Arabat-baths.html">Арабатские термы и дегустация вина на Розововм озере</a></td>
 					  <td>15 Января </td>
 				      </tr>
 				      
