--- a/page-Karpati.html
+++ b/page-Karpati.html
@@ -172,14 +172,13 @@
                         
                         <form action="https://novipovorot.us7.list-manage.com/subscribe/post?u=325c75dce90af10f77da58955&amp;id=2af7a2a416"
                                 method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
-                                class="validate" target="_blank" novalidate>
+                                class="form-inline" target="_blank" novalidate>
                           <div class="form-group">
-                            <label for="exampleInputEmail1">Email address</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Введите адрес электронной почты...">
+                            <input type="email" class="form-control w-25" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Введите адрес электронной почты...">
                             <small id="emailHelp" class="form-text text-muted">Подписавшись на нашу рассылку, вы всегда будете получать от нас последние новости и обновления.</small>
                           </div>
                             
-                          <button type="submit" class="btn btn-primary">Подписаться</button>
+                          <button type="submit" class="btn btn-primary mb-2">Подписаться</button>
                         </form>
 
                         <ul class="list-group listing">
