--- a/page-Karpati.html
+++ b/page-Karpati.html
@@ -175,7 +175,7 @@
                                 class="form-inline" target="_blank" novalidate>
                           <div class="form-group">
                             <input type="email" class="form-control w-25" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Введите адрес электронной почты...">
-                            <small id="emailHelp" class="form-text text-muted">Подписавшись на нашу рассылку, вы всегда будете получать от нас последние новости и обновления.</small>
+                            <small id="emailHelp" class="form-text text-muted">Подписавшись на нашу рассылку, вы будете получать от нас последние новости.</small>
                           </div>
                             
                           <button type="submit" class="btn btn-primary mb-2">Подписаться</button>
