--- a/page-Karpati.html
+++ b/page-Karpati.html
@@ -178,7 +178,7 @@
                             <small id="emailHelp" class="form-text text-muted">Подписавшись на нашу рассылку, вы будете получать от нас последние новости.</small>
                           </div>
                             
-                          <button type="submit" class="btn btn-primary mb-2">Подписаться</button>
+                          <button type="submit" class="btn btn-outline-primary mb-2">Подписаться</button>
                         </form>
 
                         <ul class="list-group listing">
