--- a/page-Karpati.html
+++ b/page-Karpati.html
@@ -176,7 +176,7 @@
                           <div class="form-group">
                             <input type="email" class="form-control w-25" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Введите адрес электронной почты...">
                           </div>
-                          <button type="submit" class="btn btn-outline-warning mb-2">Подписаться</button>
+                          <button type="button" class="btn btn-outline-warning mb-2">Подписаться</button>
                         </form>
 
                         <ul class="list-group listing">
