--- a/page-Karpati.html
+++ b/page-Karpati.html
@@ -174,9 +174,9 @@
                                 method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
                                 class="form-inline" target="_blank" novalidate>
                           <div class="form-group">
-                            <input type="email" class="form-control w-50" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Введите адрес электронной почты...">
+                            <input type="email" class="form-control m-2" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Введите адрес электронной почты...">
                           </div>
-                          <button type="button" class="btn btn-warning text-white mb-2 ">Подписаться</button>
+                          <button type="button" class="btn btn-warning text-white  m-2">Подписаться</button>
                         </form>
 
                         <ul class="list-group listing">
