--- a/page-Karpati.html
+++ b/page-Karpati.html
@@ -176,7 +176,7 @@
                                 class="form-inline" target="_blank" novalidate>
                             
                             <div id="mc_embed_signup_scroll" class="form-group w-100">
-                                <input type="email" value="" name="EMAIL" class="form-control m-2 w-50" id="mce-EMAIL"
+                                <input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL"
                                     placeholder="Введите адрес электронной почты..." required>
                                 <button class="btn btn-warning text-white m-2" id="mc-embedded-subscribe">Подписаться</button>
                                 <div class="clearfix"> </div>
