--- a/page-Karpati.html
+++ b/page-Karpati.html
@@ -177,7 +177,7 @@
                             
                             <div id="mc_embed_signup_scroll" class="form-group w-100">
                                 <input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL"
-                                    placeholder="Введите E-Mail..." required>
+                                    placeholder="Введите E-Mail" required>
                                 <button class="btn btn-warning text-white m-2" id="mc-embedded-subscribe">Подписаться</button>
                                 <div class="clearfix"> </div>
                             </div>
