--- a/page-Carpathians-2022.html
+++ b/page-Carpathians-2022.html
@@ -276,7 +276,25 @@
                             </li>
                         </ul>
                         </p>
-
+		
+                        <!-- E-Mail рассылкa -->
+                        <p>
+                         Подпишитесь на E-Mail рассылку:
+                        </p>
+                        <form
+                                action="https://novipovorot.us7.list-manage.com/subscribe/post?u=325c75dce90af10f77da58955&amp;id=2af7a2a416"
+                                method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
+                                class="form-inline" target="_blank" novalidate>
+                            
+                            <div id="mc_embed_signup_scroll" class="form-group w-100">
+                                <input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL"
+                                    placeholder="Введите E-Mail" required>
+                                <button class="btn btn-warning text-white m-2" id="mc-embedded-subscribe">Подписаться</button>
+                                <div class="clearfix"> </div>
+                            </div>
+                        </form>
+                        <!-- //E-Mail рассылкa -->
+                        
                         <!-- Описание экскурсии -->
                         <div class="accordion mt-3 mb-3" id="accordionExample" >
                             <div class="card">
