--- a/page-Turkey.html
+++ b/page-Turkey.html
@@ -167,7 +167,24 @@
                             <li class="telegram"><a href="https://t.me/novipovorot"><span
                                         class="fa fa-paper-plane"></span></a></li>
                         </ul>
-
+                        <!-- E-Mail рассылкa -->
+                        <p>
+                         Подпишитесь на E-Mail рассылку:
+                        </p>
+                        <form
+                                action="https://novipovorot.us7.list-manage.com/subscribe/post?u=325c75dce90af10f77da58955&amp;id=2af7a2a416"
+                                method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
+                                class="form-inline" target="_blank" novalidate>
+                            
+                            <div id="mc_embed_signup_scroll" class="form-group w-100">
+                                <input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL"
+                                    placeholder="Введите E-Mail" required>
+                                <button class="btn btn-warning text-white m-2" id="mc-embedded-subscribe">Подписаться</button>
+                                <div class="clearfix"> </div>
+                            </div>
+                        </form>
+                        <!-- //E-Mail рассылкa -->
+                        
                         <ul class="list-group listing">
                             <li class="list-group-item active"> Расписание походов: </li>
                             <li class="list-group-item"> Ликийская тропа от Фетхие до Каша <br /> <span
