--- a/booking.html
+++ b/booking.html
@@ -144,7 +144,7 @@
                                     <option>Рождество по-Королевски</option>
                                     <option>Лимонарий</option>
                                     <option>Карпаты 2022</option>
-                                    <option>Новогодние огни Днепра<option>
+                                    <option>Новогодние огни Днепра</option>
                                     <option>Мурляндия</option>
                                     <option>Киев. Харьков. Полтава</option>
                                     <option>Сырная ферма с дегустацией</option>
