--- a/page-Karpati.html
+++ b/page-Karpati.html
@@ -175,10 +175,12 @@
                                 method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
                                 class="form-inline" target="_blank" novalidate>
                             
-                            <div id="mc_embed_signup_scroll" class="form-group w-100">
+                            <div id="mc_embed_signup_scroll" class="form-group">
                                 <input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL"
                                     placeholder="Введите E-Mail" required>
-                                <button class="btn btn-warning text-white m-2" id="mc-embedded-subscribe">Подписаться</button>
+                            </div>
+                            <div id="mc_embed_signup_scroll" class="form-group">
+                                <button class="btn btn-warning text-white" id="mc-embedded-subscribe">Подписаться</button>
                                 <div class="clearfix"> </div>
                             </div>
                         </form>
