--- a/page-Karpati.html
+++ b/page-Karpati.html
@@ -175,11 +175,10 @@
                                 method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
                                 class="form-inline" target="_blank" novalidate>
                             
-                            <div id="mc_embed_signup_scroll" class="form-group">
+                            <div id="mc_embed_signup_scroll" class="">
                                 <input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL"
                                     placeholder="Введите E-Mail" required>
-                            </div>
-                            <div id="mc_embed_signup_scroll" class="form-group">
+                            
                                 <button class="btn btn-warning text-white" id="mc-embedded-subscribe">Подписаться</button>
                                 <div class="clearfix"> </div>
                             </div>
