--- a/page-Karpati.html
+++ b/page-Karpati.html
@@ -176,7 +176,7 @@
                                 class="form-inline" target="_blank" novalidate>
                             
                             <div id="mc_embed_signup_scroll" class="">
-                                <input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL"
+                                <input type="email" value="" name="EMAIL" class="" id="mce-EMAIL"
                                     placeholder="Введите E-Mail" required>
                             
                                 <button class="btn btn-warning text-white" id="mc-embedded-subscribe">Подписаться</button>
