--- a/page-Arabat-baths.html
+++ b/page-Arabat-baths.html
@@ -110,7 +110,7 @@
                             <!--<li class="breadcrumb-item"><a class="text-primary" href="packages-page-two.html">Туры, стр.2</a></li>-->
                           
                             <li class="breadcrumb-item active" aria-current="page"> 
-				    Название тура
+				   Арабатские термы
 			    </li>
                          
                         </ol>
