--- a/page-Kharkiv-Christmas.html
+++ b/page-Kharkiv-Christmas.html
@@ -180,7 +180,7 @@
 
                             <span class="fa fa-info-circle"></span><strong> Информируем</strong><br /><br />
                             <span class="txt-alg-jf">
-                                Цена билета первым ми туристам <u> </u>:  
+                                Цена билета первым 8ми туристам <u> </u>:  
                                  <strong> 800 </strong> грн.,
                                    Далее <u> </u>: взрослые 
                                  <strong> 870 </strong>грн., 
