--- a/packages-page-two.html
+++ b/packages-page-two.html
@@ -549,13 +549,13 @@
             <p class="text mt-2 mb-5 text-center">Туры выходного дня "Новый Поворот"</p>
             <div class="row inner-sec-w3layouts-w3pvt-lauinfo">
 
-                <!-- Киев. Харьков. Полтава  -->
+                <!-- Харьков Рождество  -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
-                    <h4 class="destination mb-3"> Киев </h4>
+                    <h4 class="destination mb-3"> Харьков </h4>
                     <div class="image-position position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Kiev-Kharkiv-Poltava.html">
-                            <img src="/images/Kiev-Kharkiv-Poltava/pop-Kiev-Kharkiv-Poltava.jpg" class="img-fluid"
-                                alt="Киев. Харьков. Полтава">
+                        <a href="https://novipovorot.pp.ua/page-Kharkiv-Christmas.html">
+                            <img src="/images/Kharkiv-Christmas/pop-Kharkiv-Christmas.jpg" class="img-fluid"
+                                alt=" Харьков Рождество">
                         </a>
                         <div class="rating">
                             <ul>
@@ -569,12 +569,12 @@
                     </div>
                     <div class="destinations-info">
                         <div class="caption mb-lg-3">
-                            <h4> Киев </h4>
+                            <h4> Харьков </h4>
                             <a href="booking.html">Забронировать</a>
                         </div>
                     </div>
                 </div>
-                <!-- //Киев. Харьков. Полтава  -->
+                <!-- //Харьков Рождество  -->
 
                 <!-- Карпаты - 2022 -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
