--- a/index.html
+++ b/index.html
@@ -75,6 +75,21 @@
 
         gtag('config', 'UA-170471718-1');
     </script>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-189014291-1">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-189014291-1');
+  gtag('config', 'AW-402637101');
+  gtag('config', 'AW-402637101/MrewCKUFEK2C_78B', {
+    'phone_conversion_number': '380506702264'
+  });
+</script>
 </head>
 
 <body>
