--- a/page-example.html
+++ b/page-example.html
@@ -345,14 +345,14 @@
                                             //Viber
                                             document.write(
                                                 '<a  title="Viber"  href="viber://forward?text='+linkPage+'" target="_blank" rel="noopener">'
-                                                + '<img src="./images/viber.jpg" alt="Viber" height="25px" style="margin-top:-17px;" class="pl-1 pr-1">'
+                                                + '<img src="./images/viber.jpg" alt="Viber" height="25px" style="vertical-align: top;" class="pl-1 pr-1">'
                                                 + '</a>'
                                             );  
 
                                             //VK
                                             document.write(
                                                 '<a  title="VK"  href="https://vk.com/share.php?url='+linkPage+'" target="_blank" rel="noopener">'
-                                                + '<img src="images/vk.jpg" alt="VK" height="25px" style="margin-top:-17px;" class="pl-1 pr-1">'
+                                                + '<img src="images/vk.jpg" alt="VK" height="25px" style="vertical-align: top;" class="pl-1 pr-1">'
                                                 + '</a>'
                                             );                                        
                                         </script>
