--- a/page-example.html
+++ b/page-example.html
@@ -307,8 +307,8 @@
                                           
                                         <!-- Поделиться в социальных сетях -->
                                         <script>
-                                            //Название страницы тура
-                                            let linkPage = "page-example.html";
+                                            //Вставить ссылку тура с которым поделиться
+                                            let linkPage = "https://novipovorot.pp.ua/page-example.html";
 
                                             // Instagram -->
                                             document.write(
