--- a/page-example.html
+++ b/page-example.html
@@ -312,7 +312,7 @@
                                           
                                             document.write(
                                                  //Instagram
-                                                 '<a title="Instagram" href="https://www.instagram.com/" target="_blank">'
+                                                 '<a title="Instagram" href="https://www.instagram.com/dovgalyv.zp/" target="_blank">'
                                                  + '<img src="./images/instagram.svg" alt="Instagram" style="vertical-align: top;"  class="pl-1 pr-1">'
                                                  +'</a>'
                                                                                        
