--- a/page-example.html
+++ b/page-example.html
@@ -287,7 +287,14 @@
                                 <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
                                     data-parent="#accordionExample">
                                     <div class="card-body">
-                                        
+                                        <script>
+						//Тест
+						var cars = [{name: 'Audi'}, {name: 'BMW'}, {name: 'Ferrari'}, {name: 'Mercedes'}, {name: 'Maserati'}];
+
+						for(var i = 0; i < cars.length; i++) {
+						    console.log(cars[i].name);
+						}
+					</script>
                                         <p class="txt-alg-jf"> <strong> Время </strong>
                                          Описание
                                          </p>
