--- a/page-example.html
+++ b/page-example.html
@@ -289,13 +289,20 @@
                                     <div class="card-body">
                                         <script>
 						//Тест
-						var cars = [{name: 'Audi'}, {name: 'BMW'}, {name: 'Ferrari'}, {name: 'Mercedes'}, {name: 'Maserati'}];
+						var descTours = [
+							{time: '09:01', description: 'Описание1'}, 
+							{time: '09:02', description: 'Описание2'}, 
+							{time: '09:03', description: 'Описание3'}, 
+							{time: '09:04', description: 'Описание4'}
+						];
 
-						for(var i = 0; i < cars.length; i++) {
-						    console.log(cars[i].name);
+						for(var i = 0; i < descTours.length; i++) {
+						    document.write('<p class="txt-alg-jf"><strong>' 
+								   + descTours[i].time + '</strong>' 
+								   + descTours[i].description + '</p>');
 						}
 					</script>
-                                        <p class="txt-alg-jf"> <strong> Время </strong>
+                                       <!-- <p class="txt-alg-jf"> <strong> Время </strong>
                                          Описание
                                          </p>
                                          <p class="txt-alg-jf"> <strong> Время </strong>
@@ -306,7 +313,8 @@
                                          </p>
                                         <p class="txt-alg-jf"> <strong> Время </strong>
                                          Описание
-                                         </p>
+                                         </p>-->
+					    
                                         <p class="txt-alg-jf"><strong> 18:00 </strong>
                                             Мы уже в Запорожье, довольные возвращаемся домой чтоб поделиться 
                                             впечатлениями с друзьями и близкими (но еще лучше их взять с собой).<br>
