--- a/page-example.html
+++ b/page-example.html
@@ -347,7 +347,8 @@
 						+ '<img src="images/vk.jpg" alt="VK" height="25px" style="vertical-align: top;" class="pl-1 pr-1">'
 						+ '</a>'
 						    
-						+ 'обязательно отмечаем @dovgalyv.zp, Довгаль Юлия, @novipovorot, всем кто отметит +10000 к карму и наша благодарочка.' 
+						+ 'обязательно отмечаем @dovgalyv.zp, Довгаль Юлия, @novipovorot, всем кто отметит +10000 к карму и наша благодарочка'
+						+ '<img src="/images/Emoji/1f642.png" alt="smile" height="20px">'
                                                 + 'Ждем Ваши отзывы после туров <a href="https://novipovorot.pp.ua/about.html">на нашем сайте</a> и в' 
                                                 + '<a href="https://g.page/r/Cdm-EtbnpCKPEAg/review">Гугл мапс Новый поворот Запорожье</a></p>' 
 					     );                                        
