--- a/page-example.html
+++ b/page-example.html
@@ -2,10 +2,13 @@
 <html lang="ru">
 
 <head>
-     <!-- Заголовок -->
-    <title> Заголовок тура | Новый поворот</title>
-     <!-- //Заголовок -->
-  
+	<script>
+	    let title = "Заголовок тура | Новый поворот";	
+	     //Заголовок 
+	    document.write('<title>' + title + '</title>');
+	      //Заголовок 
+	</script> 
+	
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
   
