--- a/page-example.html
+++ b/page-example.html
@@ -3,7 +3,7 @@
 
 <head>
 	<script>
-	    let title = "Заголовок тура | Новый поворот";	
+	    let title = "Title тура | Новый поворот";	
 	     //Заголовок 
 	    document.write('<title>' + title + '</title>');
 	      //Заголовок 
