--- a/page-example.html
+++ b/page-example.html
@@ -351,7 +351,7 @@
 						+ '</a>'
 						    
 						+ 'обязательно отмечаем @dovgalyv.zp, Довгаль Юлия, @novipovorot, всем кто отметит +10000 к карму и наша благодарочка'
-						+ '<img src="/images/Emoji/1f609.png" alt="smile" height="20px">'
+						+ '&nbsp;<img src="/images/Emoji/1f609.png" alt="smile" height="20px">&nbsp;'
                                                 + 'Ждем Ваши отзывы после туров <a href="https://novipovorot.pp.ua/about.html">на нашем сайте</a> и в' 
                                                 + '<a href="https://g.page/r/Cdm-EtbnpCKPEAg/review">Гугл мапс Новый поворот Запорожье</a></p>' 
 					     );                                        
