--- a/page-example.html
+++ b/page-example.html
@@ -133,11 +133,9 @@
                             <li class="breadcrumb-item"><a class="text-primary" href="index.html">Главная</a></li>
                             <li class="breadcrumb-item"><a class="text-primary" href="packages.html">Туры</a></li>
                             <!--<li class="breadcrumb-item"><a class="text-primary" href="packages-page-two.html">Туры, стр.2</a></li>-->
-                            <script>
-                    		document.write(
-			     	   '<li class="breadcrumb-item active" aria-current="page">' + title + '</li>' 
-			     	);
-		            </script>
+				<li class="breadcrumb-item active" aria-current="page">
+				    <script>document.write(title);</script>
+				</li>
                         </ol>
                     </nav>
                 </div>
