--- a/page-example.html
+++ b/page-example.html
@@ -22,7 +22,7 @@
 	    let imgInTour = "Ссылка на картинку";
 		
 	    //Дата тура
-	    let dateTour = "";
+	    let dateTour = "2022";
 		
 	    //Подзаголовок
 	    let subtitle = "Подзаголовок";
