--- a/page-example.html
+++ b/page-example.html
@@ -238,7 +238,7 @@
                         <!-- Стоимость, Продолжительность -->
                         <ul class="listing">
                             <li><span class="fa fa-tags mr-2"></span> Стоимость: <span><script>document.write(price);</script></span></li>
-                            <li><span class="fa fa-clock-o mr-2"></span> Продолжительность: <span><script>document.write(title);</script></span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span> Продолжительность: <span><script>document.write(duration);</script></span></li>
                         </ul>
                         <!-- //Стоимость, Продолжительность -->
 
