--- a/page-example.html
+++ b/page-example.html
@@ -73,8 +73,13 @@
 	   ];
 		
 	  //Тексты подсказок
-	  let helpTexts = "";
-		
+	  let helpTexts = [
+		{badge: 'Запорожье'}, 
+	        {badge: 'Новый Поворот Запорожье'}, 
+		{badge: 'Путешествия'}, 
+		{badge: 'Туризм'}
+	   ];
+	
 		
 	</script> 
 	
@@ -443,11 +448,12 @@
                         <p>
                             Тексты подсказок:
                         </p>
-                        <span class="badge rounded-pill bg-secondary text-white"> Запорожье </span>
-                        <span class="badge rounded-pill bg-secondary text-white"> Новый Поворот Запорожье </span>
-                        <span class="badge rounded-pill bg-secondary text-white"> Путешествия </span>
-                        <span class="badge rounded-pill bg-secondary text-white"> Туризм </span>
-              
+		        <script>
+			  for(var i = 0; i < helpTexts.length; i++) {
+			       document.write('<span class="badge rounded-pill bg-secondary text-white">' 
+					     + helpTexts[i].badge + '</span>');
+			  }
+		        </script> 
                     </div>
                 </div>
             </div>
