--- a/page-example.html
+++ b/page-example.html
@@ -19,7 +19,7 @@
 	    let linkPage = "https://novipovorot.pp.ua/page-example.html";
 		
 	    //Картинка
-	    let imgInTour = "Ссылка на картинку";
+	    let imgInTour = "https://picsum.photos/825/473";
 		
 	    //Дата тура
 	    let dateTour = "2022";
